[project]
name = "my-langgraph-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "html2text>=2025.4.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.8",
    "markdown>=3.10.2",
    "nest-asyncio>=1.6.0",
    "py-zerox>=0.0.7",
    "pypdf>=6.7.0",
    "python-dotenv>=1.2.1",
]
